objects/Account.object
<CustomObject>
    <fields>
        <fullName>ADP_Backlog_iDMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ADP Backlog iDMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADP_Billing_iDMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ADP Billing iDMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMA_Region__c</fullName>
        <label>AMA Region</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AMA_Regional_Alias__c</fullName>
        <label>AMA Regional Alias</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASR_Expiration_Date__c</fullName>
        <label>ASR Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASR_Pro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASR Pro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATG_Prior_Ad_Rank__c</fullName>
        <label>ATG Prior Ad Rank</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Advocate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Advocate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Alert_New__c</fullName>
        <label>Account Alert</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Alert_Used__c</fullName>
        <label>Account Alert</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Indicator_Flag__c</fullName>
        <formula>IF( ISPICKVAL( Account_Indicator__c  , &quot;Green&quot;), IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;&quot;) , 
IF( ISPICKVAL( Account_Indicator__c, &quot;Yellow&quot;), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;&quot;), 
IF(ISPICKVAL( Account_Indicator__c , &quot;Red&quot;), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;&quot;),&quot;&quot;)))</formula>
        <label>Account Indicator Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Indicator__c</fullName>
        <label>Account Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Report_Groups__c</fullName>
        <label>Account Report Groups</label>
        <picklist>
            <picklistValues>
                <fullName>FY14 Network Comp Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM SFE Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEC Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEC Install Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW - NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast Toyota (SET)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tricor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year 1 Flag</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Account_Size__c</fullName>
        <formula>if ( AND( ISPICKVAL(Region__c, &quot;PFW&quot;), NOT( ISBLANK(Total_Hierarchy_Site_Count__c ))), 
 if (Total_Hierarchy_Site_Count__c = 1, &quot;Very Small&quot;, 
 if (AND (Total_Hierarchy_Site_Count__c &gt; 1, Total_Hierarchy_Site_Count__c &lt;= 4), &quot;Small&quot;, 
 if (AND (Total_Hierarchy_Site_Count__c &gt;= 5, Total_Hierarchy_Site_Count__c &lt;= 15), &quot;Medium&quot;, 
 if (AND (Total_Hierarchy_Site_Count__c &gt;= 16, Total_Hierarchy_Site_Count__c &lt;= 25), &quot;Large&quot;, 
 if (Total_Hierarchy_Site_Count__c &gt; 25, &quot;X-Large&quot;, &quot;&quot; 
 ) 
 ) 
 ) 
 ) 
 ), 
 if (AND(NOT(ISPICKVAL(Region__c, &quot;PFW&quot;)), New_Cars_Monthly__c &gt; 0, Used_Cars_Monthly__c &gt; 0), 
	if ((New_Cars_Monthly__c + Used_Cars_Monthly__c) * 12 &lt; 601, &quot;Very Small&quot;, 
	if ((New_Cars_Monthly__c + Used_Cars_Monthly__c) * 12 &lt; 1441, &quot;Small&quot;, 
	if ((New_Cars_Monthly__c + Used_Cars_Monthly__c) * 12 &lt; 2640, &quot;Medium&quot;, &quot;Large&quot; 
	) 
	) 
	), 
	if (AND(NOT(ISPICKVAL(Region__c, &quot;PFW&quot;)), New_Units_Per_Year__c &gt; 0), 
	if (New_Units_Per_Year__c &lt; 301, &quot;Very Small&quot;, 
	if (New_Units_Per_Year__c &lt; 721, &quot;Small&quot;, 
	if (New_Units_Per_Year__c &lt; 1321, &quot;Medium&quot;, &quot;Large&quot; 
	) 
	) 
	), 
	if (AND(NOT(ISPICKVAL(Region__c, &quot;PFW&quot;)), Used_Cars_Monthly__c &gt; 0), 
	if (Used_Cars_Monthly__c * 12 &lt; 301, &quot;Very Small&quot;, 
	if (Used_Cars_Monthly__c * 12 &lt; 721, &quot;Small&quot;, 
	if (Used_Cars_Monthly__c * 12 &lt; 1321, &quot;Medium&quot;, &quot;Large&quot; 
	) 
	) 
	), 
	if (AND(NOT(ISPICKVAL(Region__c, &quot;PFW&quot;)),No_of_Employees__c &gt; 0), 
	if (No_of_Employees__c &lt; 25, &quot;Very Small&quot;, 
	if (No_of_Employees__c &lt; 49, &quot;Small&quot;, 
	if (No_of_Employees__c &lt; 89, &quot;Medium&quot;, &quot;Large&quot; 
	) 
	) 
	), &quot;&quot; 
 ) 
	) 
	) 
	) 

)

/* Old formula 
if (AND(New_Cars_Monthly__c &gt; 0, Used_Cars_Monthly__c &gt; 0), 
   if ((New_Cars_Monthly__c + Used_Cars_Monthly__c) * 12  &lt; 601, &quot;Very Small&quot;, 
      if ((New_Cars_Monthly__c + Used_Cars_Monthly__c) * 12 &lt; 1441, &quot;Small&quot;, 
         if ((New_Cars_Monthly__c  + Used_Cars_Monthly__c) * 12 &lt; 2640, &quot;Medium&quot;, &quot;Large&quot;
         ) 
      )
   ), 
   if (New_Units_Per_Year__c &gt; 0, 
      if (New_Units_Per_Year__c &lt; 301, &quot;Very Small&quot;, 
         if (New_Units_Per_Year__c  &lt; 721, &quot;Small&quot;, 
            if (New_Units_Per_Year__c &lt; 1321, &quot;Medium&quot;, &quot;Large&quot;
            )
         )  
      ), 
      if (Used_Cars_Monthly__c &gt; 0, 
         if (Used_Cars_Monthly__c * 12 &lt; 301, &quot;Very Small&quot;, 
            if (Used_Cars_Monthly__c * 12 &lt; 721, &quot;Small&quot;, 
               if (Used_Cars_Monthly__c * 12 &lt; 1321, &quot;Medium&quot;, &quot;Large&quot;
               )
            )
         ),
         if (No_of_Employees__c  &gt; 0, 
            if (No_of_Employees__c  &lt; 25, &quot;Very Small&quot;, 
               if (No_of_Employees__c  &lt; 49, &quot;Small&quot;, 
                  if (No_of_Employees__c  &lt; 89, &quot;Medium&quot;, &quot;Large&quot;
                  )
               )
            ),
            &quot;&quot;
         ) 
      )
   )
)
*/</formula>
        <label>Account Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Source__c</fullName>
        <description>Added for PFW Data Load 08/2009</description>
        <inlineHelpText>Where account was acquired from</inlineHelpText>
        <label>Account Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Users_Number__c</fullName>
        <label>Number Accounting Users</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accounting_Notes__c</fullName>
        <label>Accounting Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accounting_Products_Ready_to_Showcase__c</fullName>
        <label>Accounting Products Ready to Showcase</label>
        <picklist>
            <picklistValues>
                <fullName>Bus-Office Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Archiving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Fresh/Name Consol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open-Item A/P with ODC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open-Item A/R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signature Capture</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Accounting_Products_to_be_Sold__c</fullName>
        <label>Accounting Products to be Sold</label>
        <picklist>
            <picklistValues>
                <fullName>Bus-Office Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Archiving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Fresh/Name Consol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open-Item A/P with ODC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open-Item A/R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signature Capture</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Additional_URLs__c</fullName>
        <inlineHelpText>In addition to the Primary Website URL (above), here is a list of any other websites a dealer may have.</inlineHelpText>
        <label>Additional URLs</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <description>Added for PFW data load - 08/2009</description>
        <label>Annual Revenue</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AutoLoop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoLoop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BAC__c</fullName>
        <label>BAC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_or_Main_Site__c</fullName>
        <label>Branch or Main Site</label>
        <picklist>
            <picklistValues>
                <fullName>Main</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_License_Address__c</fullName>
        <label>License Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_License_City__c</fullName>
        <label>License City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_License_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.No_Longer_There__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>License Contacts</relationshipLabel>
        <relationshipName>LicenseContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_License_Expiration_Date__c</fullName>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_License_Last_Updated__c</fullName>
        <label>License Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Business_License_Name__c</fullName>
        <label>License Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_License_Phone__c</fullName>
        <label>License Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_License_Postal__c</fullName>
        <label>License Postal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_License_State__c</fullName>
        <label>License State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy Here Pay Here (BHPH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BuySell_Date__c</fullName>
        <label>BuySell Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buy_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buy/Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBLTAccountName__c</fullName>
        <label>Digital Solutions Account Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBLTBillAddress__c</fullName>
        <formula>CBLTBillStreet__c  &amp; BR() &amp; 
CBLTBillCity__c  &amp; 
IF(OR(
Len(  CBLTBillCity__c ) + Len( CBLTBillStreet__c ) = 0,
Len( CBLTBillState__c ) + Len( CBLTBillZip__c ) + Len( CBLTBillCountry__c ) =0), &quot;&quot;, &quot;, &quot;)
 &amp;  
CBLTBillState__c &amp; &quot; &quot; &amp;  
CBLTBillZip__c &amp;  BR() &amp;  
CBLTBillCountry__c</formula>
        <label>Digital Solutions Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBLTBillCity__c</fullName>
        <label>Billing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBLTBillCountry__c</fullName>
        <label>Billing Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBLTBillState__c</fullName>
        <label>Billing State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBLTBillStreet__c</fullName>
        <label>Digital Solutions Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBLTBillZip__c</fullName>
        <label>Billing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBLTFax__c</fullName>
        <label>Digital Solutions Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CBLTPhone__c</fullName>
        <label>Digital Solutions Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CBLTShipAddress__c</fullName>
        <formula>CBLTShipStreet__c &amp; BR() &amp; 
CBLTShipCity__c &amp; 
IF(OR( 
Len( CBLTShipCity__c ) + Len( CBLTShipStreet__c ) = 0, 
Len( CBLTState__c ) + Len( CBLTZip__c ) + Len( CBLTShipCountry__c ) =0), &quot;&quot;, &quot;, &quot;)
 &amp; 
CBLTState__c &amp; &quot; &quot; &amp; 
CBLTZip__c &amp; BR() &amp; 
CBLTShipCountry__c</formula>
        <label>Digital Solutions Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBLTShipCity__c</fullName>
        <label>Shipping City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBLTShipCountry__c</fullName>
        <label>Shipping Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBLTShipStreet__c</fullName>
        <label>Digital Solutions Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBLTState__c</fullName>
        <label>Shipping State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBLTZip__c</fullName>
        <label>Shipping Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_SVC_DGVP_URL_Last_Updated_By__c</fullName>
        <description>DGVP URL Last Updated By - data is populated in workflow CB_SVC_DGVP_CONTRACT_URL_LAST_UPDATED</description>
        <inlineHelpText>DGVP URL Last Updated By - data is populated in workflow CB_SVC_DGVP_CONTRACT_URL_LAST_UPDATED</inlineHelpText>
        <label>DGVP URL Last Updated By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CB_SVC_DGVP_URL_Last_Updated__c</fullName>
        <description>DGVP URL Last Updated - data is populated in workflow CB_SVC_DGVP_CONTRACT_URL_LAST_UPDATED</description>
        <inlineHelpText>DGVP URL Last Updated - data is populated in workflow CB_SVC_DGVP_CONTRACT_URL_LAST_UPDATED</inlineHelpText>
        <label>DGVP URL Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CB_SVC_DG_VOLUME_PRICING_CONTRACT_URL__c</fullName>
        <description>This links to the DG Volume Pricing contract attached to the account.</description>
        <inlineHelpText>This links to the DG Volume Pricing contract attached to this account.</inlineHelpText>
        <label>Dealer Group Volume Pricing Contract URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CID__c</fullName>
        <label>CID</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>COF_Summary__c</fullName>
        <label>Dealership Online Advertising Goals</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CRM_Users_Only_Number__c</fullName>
        <label>Number CRM Users</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM__c</fullName>
        <description>Traver Field</description>
        <inlineHelpText>Traver Field - CRM</inlineHelpText>
        <label>CRM</label>
        <picklist>
            <picklistValues>
                <fullName>WebCRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autobase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealersocket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imagic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealertrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DASH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date_New__c</fullName>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date_Used__c</fullName>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chrysler_OOB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check Box to Track Chrysler OOB 2009 restructure</description>
        <label>Chry Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Authorization_Requirements__c</fullName>
        <label>Client Authorization Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cobalt_Strategy__c</fullName>
        <label>Cobalt Strategy</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Collection_Status__c</fullName>
        <label>Collection Status</label>
        <picklist>
            <picklistValues>
                <fullName>Do Not Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Researching</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Collector__c</fullName>
        <label>Collector</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Specific_Signer_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Specific Signer 1</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3 OR 4 OR 5)</booleanFilter>
            <filterItems>
                <field>Contact.No_Longer_There__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Corporation__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Group__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.District__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Contact Specific Signer 1)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Specific_Signer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Specific Signer 2</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3 OR 4 OR 5)</booleanFilter>
            <filterItems>
                <field>Contact.No_Longer_There__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Corporation__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Group__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.District__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Contact Specific Signer 2)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Utility__c</fullName>
        <label>Core Utility</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Corporation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Site_Type__r.Corporation_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Duplicate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Accounts with Site Type of &apos;Corporation&apos;  only are allowed.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Corporation (Account)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Council_Year__c</fullName>
        <label>Council Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Opps__c</fullName>
        <label>Count of Opps</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Critical_Alert__c</fullName>
        <formula>IF( Show_Critical_Alert__c , 
IMAGE(&quot;https://adpdealerservices.my.salesforce.com/resource/1329532250000/siren&quot;,&quot;ALERT!!&quot;,20,18),&quot;&quot;)</formula>
        <label>Critical Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Critical_Note__c</fullName>
        <label>Critical Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Lot_Mgmt_Vendor__c</fullName>
        <label>Current Lot Mgmt Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_ServiceEdge_Vendor__c</fullName>
        <label>Current ServiceEdge Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Website_Vendor__c</fullName>
        <label>Current Website Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Gauge_Flag__c</fullName>
        <formula>IF(( Customer_Gauge__c &gt;= 0 &amp;&amp; Customer_Gauge__c &lt;=6), IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;&quot;) ,
 IF(( Customer_Gauge__c &gt;= 7 &amp;&amp; Customer_Gauge__c &lt;=8), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;&quot;),
 IF(( Customer_Gauge__c &gt;= 9 &amp;&amp; Customer_Gauge__c &lt;=10), IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;&quot;),&quot;&quot;)))</formula>
        <label>Customer Gauge Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Gauge__c</fullName>
        <label>Customer Gauge</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Echelon_Level__c</fullName>
        <label>DA Echelon Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Echelon_Manager_Override__c</fullName>
        <inlineHelpText>This must be filled out at the highest level. If the Corporation field is filled out, click on the Corporation and fill out this field on that account. If the Group field is filled out, fill out on that account. Else, fill out this field.</inlineHelpText>
        <label>DA Echelon Manager Override</label>
        <picklist>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_Manager_Override_Notes__c</fullName>
        <inlineHelpText>Please provide notes if you select &quot;Other&quot; for the DA Manager Override Reason.</inlineHelpText>
        <label>DA Manager Override Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DA_Manager_Override_Reason__c</fullName>
        <inlineHelpText>You must fill out the reason if you fill out the DA Echelon Manager Override field.</inlineHelpText>
        <label>DA Manager Override Reason</label>
        <picklist>
            <picklistValues>
                <fullName>OEM Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelling</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMS__c</fullName>
        <description>Traver Field</description>
        <inlineHelpText>Traver list of DMS</inlineHelpText>
        <label>DMS</label>
        <picklist>
            <picklistValues>
                <fullName>Autosoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealertrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealerbuilt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adam</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>